errors.txt
[ 64%] Building CXX object CMakeFiles/NGFWTrafficGenerator.dir/main.cpp.o
/home/ubuntu/NGFWTrafficGen/main.cpp: In function ‘bool launch_workers(const trafficgen::AppConfig&)’:
/home/ubuntu/NGFWTrafficGen/main.cpp:187:27: error: could not convert ‘worker.std::unique_ptr<trafficgen::Worker>::operator->()->trafficgen::Worker::start()’ from ‘void’ to ‘bool’
  187 |         if (!worker->start()) {
      |              ~~~~~~~~~~~~~^~
      |                           |
      |                           void
/home/ubuntu/NGFWTrafficGen/main.cpp:187:27: error: in argument to unary !
/home/ubuntu/NGFWTrafficGen/main.cpp: In function ‘int main(int, char**)’:
/home/ubuntu/NGFWTrafficGen/main.cpp:342:21: error: ‘class trafficgen::Worker’ has no member named ‘join’
  342 |             worker->join();
      |                     ^~~~
In file included from /usr/include/c++/13/memory:78,
                 from /home/ubuntu/NGFWTrafficGen/main.cpp:3:
/usr/include/c++/13/bits/unique_ptr.h: In instantiation of ‘std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...) [with _Tp = trafficgen::Worker; _Args = {trafficgen::Worker::Config&}; __detail::__unique_ptr_t<_Tp> = __detail::__unique_ptr_t<trafficgen::Worker>]’:
/home/ubuntu/NGFWTrafficGen/main.cpp:186:47:   required from here
/usr/include/c++/13/bits/unique_ptr.h:1070:30: error: no matching function for call to ‘trafficgen::Worker::Worker(trafficgen::Worker::Config&)’
 1070 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/ubuntu/NGFWTrafficGen/main.cpp:16:
/home/ubuntu/NGFWTrafficGen/core/worker/worker.hpp:33:5: note: candidate: ‘trafficgen::Worker::Worker(const Config&, volatile bool&)’
   33 |     Worker(const Config& config, volatile bool& force_quit);
      |     ^~~~~~
/home/ubuntu/NGFWTrafficGen/core/worker/worker.hpp:33:5: note:   candidate expects 2 arguments, 1 provided
make[2]: *** [CMakeFiles/NGFWTrafficGenerator.dir/build.make:89: CMakeFiles/NGFWTrafficGenerator.dir/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:972: CMakeFiles/NGFWTrafficGenerator.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
